SFDCProject/src/objects/Guided_Sales_Answer__c.object
<CustomObject>
    <fields>
        <fullName>Answer_Text__c</fullName>
        <inlineHelpText>Answer option for the question.</inlineHelpText>
        <label>Answer Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Question__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Next Question</label>
        <referenceTo>Guided_Sales_Question__c</referenceTo>
        <relationshipLabel>Depends on Answers</relationshipLabel>
        <relationshipName>Depends_on_Answers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <inlineHelpText>The order in which the answer should be shown. Value must be numeric.</inlineHelpText>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <referenceTo>Guided_Sales_Question__c</referenceTo>
        <relationshipLabel>Answers</relationshipLabel>
        <relationshipName>Answers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Guided Sales Answer</label>
    <nameField>
        <label>Answer</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Guided Sales Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>